Style view files

--- a/PropertyManagementApp/Views/Home/Index.cshtml
+++ b/PropertyManagementApp/Views/Home/Index.cshtml
@@ -6,24 +6,20 @@
             <h1 style="color: inherit; background-color: rgba(255, 255, 255, .95);border-radius: 25px;" class="text-center col-md-4 col-md-offset-4">Elegant Apartment Homes</h1>
         </div>
         <div class="row">
-             <h3 class="text-center col-md-8 col-md-offset-2"  style="margin-bottom: 15px;border-radius: 25px; background-color: rgba(255, 255, 255, 0.80);">Find your new home in one of our locations near Milwaukee's Third Ward.</h3> 
+             <h3 class="text-center col-md-8 col-md-offset-2"  style="margin-bottom: 15px;border-radius: 15px; background-color: rgba(255, 255, 255, 0.80);">Find your new home in one of our locations near Milwaukee's Third Ward.</h3> 
         </div>
         <div class="row">
-             <p class="col-md-2 col-md-offset-5"><a href="https://asp.net" class="btn btn-primary btn-lg center-block " style="border:thin solid white">Learn more &raquo;</a></p>
+             <p class="col-md-2 col-md-offset-5"><a href=../Vacancies/ViewVacancies class="btn btn-primary btn-lg center-block " style="border:thin solid white">Learn more</a></p>
         </div>
 
         <div class="row" >
-            <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;padding: 5px;" >
+            <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;padding: 5px; margin-right: 5px;" >
                 <h3 class="text-center">Looking for a new home?</h3>
                 <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>View Our Vacancies</a></p>
             </div>
-            <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;">
+            <div class="col-md-5" style="float:right; background-color: rgba(255, 255, 255, 0.80); border-radius: 25px; padding: 5px; margin-left: 5px;">
                 <h3 class="text-center">Are you a resident?</h3>
                 <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>Log in here</a></p>
             </div>
-            @*<div class="col-md-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;margin: 20px;">
-                <h3 class="text-center">Looking for a new home?</h3>
-                <p><a class="btn btn-linkcol-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>View Our Vacancies</a></p>
-            </div>*@
        </div>
 </div>
