Update Service Provider section

--- a/PropertyManagementApp/Views/PreferredServiceProviders/Index.cshtml
+++ b/PropertyManagementApp/Views/PreferredServiceProviders/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<PropertyManagementApp.Models.PreferredServiceProviders>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Service Providers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Service Providers</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
