--- a/PropertyManagementApp/Views/PreferredServiceProviders/Create.cshtml
+++ b/PropertyManagementApp/Views/PreferredServiceProviders/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create a New ServiceProvider Record</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +13,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PreferredServiceProviders</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
