--- a/PropertyManagementApp/Views/Vacancies/Maps.cshtml
+++ b/PropertyManagementApp/Views/Vacancies/Maps.cshtml
@@ -1,13 +1,11 @@
 ﻿@model PropertyManagementApp.Models.Vacancies
 
 @{
-    ViewBag.Title = "Maps";
+    ViewBag.Title = Html.DisplayFor(model => model.BuildingName);
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Maps</h2>
-
-<p>@Html.DisplayFor(model => model.BuildingName)</p>
+<h2>@ViewBag.Title</h2>
 
 <script src='@string.Format("https://maps.google.com/maps/api/js?key={0}", Credentials.GeoCodeApiKey)' ,type="text/javascript"></script>
 
