Update views: info requests, Home, manager, service requests, vacancies

--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -8,13 +8,15 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <div class="container">
     <div class="row">
+
         <div class="col-md-6 table-bordered">
-            <h4 class="text-center"><a href="~/ServiceRequests">Units Currently Needing Service</a></h4>
+            <h4 class="text-center"><a href="~/ServiceRequests">Service Requests</a></h4>
         </div>
         <div class="col-md-6 table-bordered">
             <h4 class="text-center"><a href="~/PreferredServiceProviders">Service Providers</a></h4>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-4 table-bordered">
             <h4 class="text-center"><a href="~/Messages/SendMessageFromManagerToResident">Send Email to a Resident</a></h4>
@@ -28,10 +30,15 @@
             <h4 class="text-center"><a href="https://dashboard.stripe.com/test/payments">Payments</a></h4>
         </div>
      </div>
+
     <div class="row">
-        <div class="table-bordered">
+        <div class="col-md-6 table-bordered">
             <h4 class="text-center"><a href="~/Vacancies/Index">Manage Vacancies</a></h4>
         </div>
+    
+    <div class="col-md-6 table-bordered">
+        <h4 class="text-center"><a href="~/AvailableUnitInfoRequests">Information Requests</a></h4>
+    </div>
     </div>
 </div>
 
