--- a/PropertyManagementApp/Views/Vacancies/Details.cshtml
+++ b/PropertyManagementApp/Views/Vacancies/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Vacancy Details</h2>
 
 <div>
-    <h4>Vacancies</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
