--- a/PropertyManagementApp/Views/AvailableUnitInfoRequests/Delete.cshtml
+++ b/PropertyManagementApp/Views/AvailableUnitInfoRequests/Delete.cshtml
@@ -7,9 +7,8 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this information request?</h3>
 <div>
-    <h4>AvailableUnitInfoRequests</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
