--- a/PropertyManagementApp/Views/AvailableUnitInfoRequests/Details.cshtml
+++ b/PropertyManagementApp/Views/AvailableUnitInfoRequests/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Information Request Details</h2>
 
 <div>
-    <h4>AvailableUnitInfoRequests</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
