--- a/PropertyManagementApp/Views/AvailableUnitInfoRequests/Edit.cshtml
+++ b/PropertyManagementApp/Views/AvailableUnitInfoRequests/Edit.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Edit Information Requests</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AvailableUnitInfoRequests</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
