--- a/PropertyManagementApp/Views/Home/Contact.cshtml
+++ b/PropertyManagementApp/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Contact us here.</h3>
 
 <address>
     313 N Plankinton Ave<br />
