--- a/PropertyManagementApp/Views/Home/Maps.cshtml
+++ b/PropertyManagementApp/Views/Home/Maps.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src='@string.Format("https://maps.google.com/maps/api/js?key={0}", Credentials.GeoCodeApiKey)',type="text/javascript"></script>
-
+<h2>Our Locations</h2>
 
 <style>
     #map_canvas img {
