--- a/PropertyManagementApp/Views/Home/About.cshtml
+++ b/PropertyManagementApp/Views/Home/About.cshtml
@@ -4,3 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 
 <p>Find your new Milwaukee home here.</p>
+<p>Whether you're looking for lofts or riverfront views, we have options to meet your needs. Explore the vacancies and locations options above for more information.</p>
