--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -9,21 +9,24 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-6 table-bordered">
-            <h4 class="text-center"><a href="~/ServiceRequests">Service Requests</a></h4>
+        <div class="col-md-4 table-bordered">
+            <h4 class="text-center"><a href="~/Account/Register">Register a Resident</a></h4>
+            </div>
+            <div class="col-md-4 table-bordered">
+                <h4 class="text-center"><a href="~/ServiceRequests">Service Requests</a></h4>
+            </div>
+            <div class="col-md-4 table-bordered">
+                <h4 class="text-center"><a href="~/PreferredServiceProviders">Service Providers</a></h4>
+            </div>
         </div>
-        <div class="col-md-6 table-bordered">
-            <h4 class="text-center"><a href="~/PreferredServiceProviders">Service Providers</a></h4>
-        </div>
-    </div>
 
     <div class="row">
         <div class="col-md-4 table-bordered">
-            <h4 class="text-center"><a href="~/Messages/SendMessageFromManagerToResident">Send Email to a Resident</a></h4>
+            <h4 class="text-center"><a href="~/Messages/SendMessageFromManagerToResident">Email a Resident</a></h4>
         </div>
 
         <div class="col-md-4 table-bordered">
-            <h4 class="text-center"><a href="~/Messages/SendFromManagerToBuilding">Send Email to a Building</a></h4>
+            <h4 class="text-center"><a href="~/Messages/SendFromManagerToBuilding">Email a Building</a></h4>
         </div>
 
         <div class="col-md-4 table-bordered">
@@ -32,11 +35,14 @@
      </div>
 
     <div class="row">
-        <div class="col-md-6 table-bordered">
+        <div class="col-md-4 table-bordered">
             <h4 class="text-center"><a href="~/Vacancies/Index">Manage Vacancies</a></h4>
         </div>
+
+        <div class="col-md-4 table-bordered"><h4 class="text-center"><a href="~/Residents/Index">Manage Residents</a></h4>
+        </div>
     
-    <div class="col-md-6 table-bordered">
+        <div class="col-md-4 table-bordered">
         <h4 class="text-center"><a href="~/AvailableUnitInfoRequests">Information Requests</a></h4>
     </div>
     </div>
