--- a/PropertyManagementApp/Views/Messages/SendFromResidentToResident.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendFromResidentToResident.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to a Neighbor</h2>
+<h2>Email a Neighbor</h2>
 
 @using (Html.BeginForm())
 {
