--- a/PropertyManagementApp/Views/ServiceRequests/Index.cshtml
+++ b/PropertyManagementApp/Views/ServiceRequests/Index.cshtml
@@ -78,7 +78,7 @@
             @Html.DisplayFor(modelItem => item.DateCompleted)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Update", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
