--- a/PropertyManagementApp/Views/Home/Index.cshtml
+++ b/PropertyManagementApp/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-5" style="float:right; background-color: rgba(255, 255, 255, 0.80); border-radius: 25px; padding: 5px; margin-left: 5px;">
                 <h3 class="text-center">Are you a resident?</h3>
-                <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>Log in here</a></p>
+                <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Residents/Welcome>Log in here</a></p>
             </div>
        </div>
 </div>
