--- a/PropertyManagementApp/Views/Locations/Buildings.cshtml
+++ b/PropertyManagementApp/Views/Locations/Buildings.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Buildings</h2>
+<h2>Our Locations</h2>
 
 <table class="table">
     <tr>
@@ -56,10 +56,86 @@
         <td>
             @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
-        <td>
-            @Html.ActionLink("See On Map", "Maps", "Home")
-        </td>
-    </tr>
+        </tr>
 }
 
 </table>
+
+<script src='@string.Format("https://maps.google.com/maps/api/js?key={0}", Credentials.GeoCodeApiKey)' ,type="text/javascript"></script>
+
+<style>
+    #map_canvas img {
+        max-width: none;
+    }
+</style>
+
+<!-- info window -->
+<style>
+    .infoDiv {
+        height: 200px;
+        width: 300px;
+        -webkit-user-select: none;
+        background-color: white;
+    }
+</style>
+<br />
+<!-- Map -->
+<div id="map_canvas" style="height: 550px;"></div>
+
+@section scripts {
+    <section class="scripts">
+
+        <script type="text/javascript">
+
+    $(document).ready(function () {
+        Initialize();
+    });
+
+    function Initialize() {
+
+        google.maps.visualRefresh = true;
+            var MitchellOnWater = new google.maps.LatLng(43.0330517, -87.9088048);
+
+        var mapOptions = {
+            zoom: 14,
+            center: MitchellOnWater,
+            mapTypeId: google.maps.MapTypeId.G_NORMAL_MAP
+        };
+
+        var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+
+        var data = [
+            {
+                "Id": 1, "PlaceName": "Mitchell On Water", "GeoLat": "43.0330517", "GeoLong": "-87.9088048"
+            },
+            {
+                "Id": 2, "PlaceName": "DoMUS Apartments", "GeoLat": "43.0291769", "GeoLong": "-87.90456449999999"
+            },
+            {
+                "Id": 3, "PlaceName": "Pritzlaff Lofts", "GeoLat": "43.0342677", "GeoLong": "-87.9114481"
+            },
+        ];
+
+        $.each(data, function (i, item) {
+            var marker = new google.maps.Marker({
+                'position': new google.maps.LatLng(item.GeoLat, item.GeoLong),
+                'map': map,
+                'title': item.PlaceName
+            });
+
+            marker.setIcon('http://maps.google.com/mapfiles/ms/icons/green-dot.png')
+
+            var infowindow = new google.maps.InfoWindow({
+                content: "<h4>" + item.PlaceName + "</h4>"
+            });
+
+            google.maps.event.addListener(marker, 'click', function () {
+                infowindow.open(map, marker);
+            });
+
+        })
+    }
+        </script>
+    </section>
+}
+ 
