--- a/PropertyManagementApp/Views/Messages/Delete.cshtml
+++ b/PropertyManagementApp/Views/Messages/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this message?</h3>
 <div>
     <h4>Messages</h4>
     <hr />
