--- a/PropertyManagementApp/Views/Messages/SendFromManagerToBuilding.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendFromManagerToBuilding.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to a Building</h2>
+<h2>Email a Building</h2>
 
 @using (Html.BeginForm())
 {
