--- a/PropertyManagementApp/Views/Messages/SendFromResidentToBuilding.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendFromResidentToBuilding.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to Your Building</h2>
+<h2>Email Your Neighbors</h2>
 
 @using (Html.BeginForm())
 {
