--- a/PropertyManagementApp/Views/Messages/SendMessageFromManagerToResident.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendMessageFromManagerToResident.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to a Resident</h2>
+<h2>Email a Resident</h2>
 
 @using (Html.BeginForm())
 {
