--- a/PropertyManagementApp/Views/Messages/SendToManager.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendToManager.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to the Manager</h2>
+<h2>Email the Manager</h2>
 
 @using (Html.BeginForm())
 {
