--- a/PropertyManagementApp/Views/PreferredServiceProviders/Delete.cshtml
+++ b/PropertyManagementApp/Views/PreferredServiceProviders/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this service provider?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
